fix: tip calculator

--- a/temperature-converter/index.html
+++ b/temperature-converter/index.html
@@ -4,10 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Temperature Converter</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Temperature Converter</h1>
-    
+    <div>
+        <h1>Temperature Converter</h1>
+        <br>
+        <label for="">Celcius:</label>
+        <input type="number" name="celcius" id="celcius">
+        <br>
+        <label for="fahrenheit">Fahrenheit:</label>
+        <input type="number" name="fahrenheit" id="fahrenheit">
+        <br>
+        <label for="kelvin">Kelvin</label>
+        <input type="number" name="kelvin" id="kelvin">
+    </div>
+
+    <script src="script.js"></script>
     
 </body>
 </html>
